# betstamp-takehome

./: .env.example  .gitignore  AGENTS.md  DEVLOG.md  DEVLOG_FINAL_SUMMARY.md  README.md  app.py  pyproject.toml  requirements.txt  vercel.json
data/: sample_odds_data.json
docs/: wireframes.md
public/: index.html
scripts/: seed_odds.py  test_draftkings_nba_odds.py
services/: __init__.py  agent.py  arbitrage.py  best_line.py  book_tightness.py  briefing_schema.py  config.py  consensus_outlier.py  database.py  draftkings_odds.py  math_odds.py  odds_repository.py  odds_seed.py  openai_errors.py  sse.py  stake_weights.py  thread_store.py  tool_schemas.py
services/prompts/: briefing_user.md  system_prompt.md
static/: index.html
supabase/migrations/: 001_init.sql
templates/: app.js  index.html
tests/: test_agent_stream.py  test_app.py  test_arbitrage.py  test_best_line.py  test_book_tightness.py  test_briefing_schema.py  test_consensus_outlier.py  test_database_sql.py  test_draftkings_odds.py  test_math_odds.py  test_odds_seed.py  test_parse_briefing_json.py  test_stake_weights.py
