[project]
name = "betstamp-odds-agent"
version = "0.1.0"
description = "AI odds agent take-home (FastAPI on Vercel)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "openai>=1.59.0",
  "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]
